fixed spacing

--- a/src/components/JetskiLanding/jetski-landing.css
+++ b/src/components/JetskiLanding/jetski-landing.css
@@ -2,3 +2,17 @@
     background-image: url("./assets/parasail-hero.png");
     color: white;
 }
+
+#book-button {
+    margin-top: 25px;
+    margin-bottom: 15px;
+}
+
+#icon {
+    margin-top: 15px;
+}
+
+#title {
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
